--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -346,4 +346,13 @@ a {
     .logo img {
         height: 60px;
     }
+    .sub_menu_item {
+        height: 70px;
+        width: 230px;
+        padding-left: 40px;
+    }
+    .sub_menu_item img {
+        height: 30px !important;
+        width: auto !important;
+    }
 }
