--- a/src/app/screens/devices/devices.component.css
+++ b/src/app/screens/devices/devices.component.css
@@ -308,6 +308,10 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.10);
+    margin-top: 10px;
+    padding: 30px;
+    border-radius: 20px;
 }
 
 strong {
@@ -439,7 +443,7 @@ strong {
 }
 
 .h-item strong {
-    width: 90px;
+    width: 105px;
 }
 
 .h-item span {
@@ -590,7 +594,7 @@ strong {
     line-height: normal;
 }
 
-.note-banner {
+/* .note-banner {
     background: url(../../../assets/img/block.png);
     background-size: cover;
     background-position: center;
@@ -632,6 +636,43 @@ strong {
     font-weight: 400;
     line-height: 130%;
     letter-spacing: 0.36px;
+} */
+
+.note-banner {
+    background: rgba(46, 189, 151, 0.2);
+    border: 1px solid rgba(46, 189, 151, 0.5);;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.note-banner div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.note-banner p:nth-child(1) {
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.note-banner button {
+    background: white;
+    border: none;
+    height: 28px;
+    width: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.note-banner button img {
+    width: 20px;
+}
+
+.note-banner p {
+    font-size: 18px;
+    color: #737791;
+    text-align: center;
 }
 
 .activity {
@@ -833,16 +874,21 @@ strong {
 }
 
 .a_top button {
-    padding: .75rem 1rem;
+    padding: 10px 20px;
     border-radius: 8px;
-    background: #FFF;
-    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.25);
+    background: linear-gradient(180deg, #1A9096 0%, #2EBC96 100%), #FFF;    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.25);
+    color: white;
     border: none;
     cursor: pointer;
     outline: none;
     display: flex;
     align-items: center;
     gap: 1rem;
+    font-size: 20px;
+}
+
+.a_top button img {
+    width: 20px;
 }
 
 .a_top button span {
@@ -873,6 +919,20 @@ strong {
     background: linear-gradient(273deg, #2EBC96 2.11%, #1A9096 121.12%);
     padding: 1.5rem 3rem;
     position: relative;
+}
+
+.filter-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 100%;
+}
+
+.filter-inputs-line {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 20px;
 }
 
 .close {
@@ -931,6 +991,16 @@ strong {
     background: rgba(217, 217, 217, 0.10);
     outline: none;
     padding: 1rem;
+    color: white;
+}
+
+.inp_con input {
+    border-radius: 9.418px;
+    border: 0.856px solid #D9D9D9;
+    background: rgba(217, 217, 217, 0.10);
+    outline: none;
+    padding: 1rem;
+    color: white;
 }
 
 .a_table_wrapper {
